scan installed plugins, normalize to db
